docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/exposeddropdownmenubox.mdx
---
title: ExposedDropdownMenuBox
description: A Jetpack Compose ExposedDropdownMenuBox component for displaying a dropdown menu with a customizable anchor.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For a cross-platform picker, see [`Picker`](../universal/picker) — built on top of `ExposedDropdownMenuBox` on Android.

Expo UI `ExposedDropdownMenuBox` matches the official Jetpack Compose [`ExposedDropdownMenuBox`](https://kotlinlang.org/api/compose-multiplatform/material3/androidx.compose.material3/-exposed-dropdown-menu-box.html). Use the `menuAnchor()` modifier on the anchor content (typically a read-only `TextField`) and `ExposedDropdownMenu` to wrap `DropdownMenuItem` children.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/exposeddropdownmenubox/android-light.webp"
  darkSrc="/static/images/expo-ui/exposeddropdownmenubox/android-dark.webp"
  alt="Exposed dropdown menu showing four language options anchored to a text field"
/>

## Installation

<APIInstallSection />

## Usage

### Basic

> The anchor is a read-only `TextField` bound to a [`useNativeState`](usenativestate) observable. Update that observable in each item's `onClick` to reflect the selected value.

<ComponentExample
  title="BasicExposedDropdownMenuBoxExample.tsx"
  src="/static/images/expo-ui/examples/exposeddropdownmenubox-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/exposeddropdownmenubox-basic-android-dark.webp"
  alt="A read-only text field showing Java with an open menu below it listing Java, JavaScript, and TypeScript">

```tsx
import {
  DropdownMenuItem,
  ExposedDropdownMenuBox,
  ExposedDropdownMenu,
  Host,
  Text,
  TextField,
  useNativeState,
} from '@expo/ui/jetpack-compose';
import { menuAnchor } from '@expo/ui/jetpack-compose/modifiers';
import { useState } from 'react';

const LANGUAGES = [
  { label: 'Java', value: 'java' },
  { label: 'JavaScript', value: 'js' },
  { label: 'TypeScript', value: 'ts' },
];

export default function BasicExposedDropdownMenuBoxExample() {
  const selectedLabel = useNativeState('Java');
  const [expanded, setExpanded] = useState(false);

  return (
    <Host matchContents>
      <ExposedDropdownMenuBox
        expanded={expanded}
        onExpandedChange={setExpanded}>
        <TextField
          value={selectedLabel}
          readOnly
          modifiers={[menuAnchor()]}
        />
        <ExposedDropdownMenu
          expanded={expanded}
          onDismissRequest={() => setExpanded(false)}>
          {LANGUAGES.map(lang => (
            <DropdownMenuItem
              key={lang.value}
              onClick={() => {
                selectedLabel.value = lang.label;
                setExpanded(false);
              }}>
              <DropdownMenuItem.Text>
                <Text>{lang.label}</Text>
              </DropdownMenuItem.Text>
            </DropdownMenuItem>
          ))}
        </ExposedDropdownMenu>
      </ExposedDropdownMenuBox>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { ExposedDropdownMenuBox } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/exposeddropdownmenubox"
  apiName="ExposedDropdownMenuBox"
/>
